--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="cms_id" content="0005vue3_pc_test" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script>
+      if (['localhost','dev.f2e.163.com'].indexOf(location.hostname) == -1 && window.location.protocol == 'http:') {
+        window.location.href = window.location.href.replace('http', 'https')
+      }
+    </script>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <!-- STAT NetEase Devilfish 2006 -->
+     <script type="text/javascript" src="//analytics.163.com/ntes.js"></script>
+     <script type="text/javascript">
+       _ntes_nacc = "sports"; //站点ID。
+       neteaseTracker();
+     </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
